do not use Xively

--- a/outputs.cfg
+++ b/outputs.cfg
@@ -2,8 +2,8 @@
 filename=print
 enabled=on
 
-[Xively]
-filename=xively
-enabled=on
-APIKey=YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY
-FeedID=XXXXXXXXXX
+# [Xively]
+# filename=xively
+# enabled=on
+# APIKey=YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY
+# FeedID=XXXXXXXXXX
