add option for single run, e.g. in crontabs

--- a/settings.cfg
+++ b/settings.cfg
@@ -1,4 +1,5 @@
 [Main]
-uploadDelay = 60 	;how long to wait before uploading again
+singleRun=on        ; to run only once, e.g. in a crontab
+uploadDelay = 60 	; how long to wait before uploading again
 redPin=10
 greenPin=22
