handle writing to DB properly, even if some items are not showing up in dataPoints

--- a/outputs.cfg
+++ b/outputs.cfg
@@ -7,6 +7,10 @@ filename=dbWriter
 dbName=airPiDataNew.sql3
 enabled=on
 
+[PGWriter]
+filename=pgWriter
+enabled=on
+
 # [Xively]
 # filename=xively
 # enabled=on
